Bug 1346632 - Add a mochitest. r=kats
MozReview-Commit-ID: 2o3cpTaGG1V

UltraBlame original commit: d921a7db8025a3f10879bb6a3c33ac054a745ea9

--- a/gfx/layers/apz/test/mochitest/test_group_mouseevents.html
+++ b/gfx/layers/apz/test/mochitest/test_group_mouseevents.html
@@ -242,6 +242,32 @@ helper_drag_scroll
 html
 '
 }
+/
+/
+Test
+for
+dragging
+the
+scrollbar
+with
+a
+fixed
+-
+pos
+element
+overlaying
+it
+{
+'
+file
+'
+:
+'
+helper_bug1346632
+.
+html
+'
+}
 ]
 ;
 if
