Bug 1296492 Part2: Synthesize native touch events to trigger pointerevent_multiple_primary_pointers_boundary_events-manual.html. r=smaug
MozReview-Commit-ID: JZSzh7pHd8T

UltraBlame original commit: b5a2225f267d53e5fa594cfbc8edb8595f0b6fe5

--- a/dom/events/test/pointerevents/test_pointerevent_multiple_primary_pointers_boundary_events-manual.html
+++ b/dom/events/test/pointerevents/test_pointerevent_multiple_primary_pointers_boundary_events-manual.html
@@ -143,6 +143,48 @@ js
 script
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+apz_test_utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+apz_test_native_event_utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -191,6 +233,32 @@ startTest
 (
 )
 {
+/
+/
+Suppress
+checking
+pointer
+id
+in
+this
+test
+case
+because
+we
+need
+to
+/
+/
+trigger
+this
+test
+case
+with
+synthesized
+native
+touch
+events
+.
 runTestInNewWindow
 (
 "
@@ -200,6 +268,7 @@ manual
 .
 html
 "
+true
 )
 ;
 }
@@ -220,25 +289,88 @@ mousemove
 "
 )
 ;
-sendTouchEvent
-(
 int_win
+.
+document
+.
+getElementById
+(
 "
 target1
-"
-"
-touchstart
 "
 )
-;
-sendTouchEvent
+.
+addEventListener
+(
+"
+mouseenter
+"
+(
+)
+=
+>
+{
+/
+/
+Can
+'
+t
+dispatch
+these
+events
+in
+the
+callback
+of
+synthesizeNativeTap
+/
+/
+because
+the
+callback
+is
+invoked
+before
+the
+touch
+generated
+mouse
+/
+/
+events
+.
+window
+.
+addEventListener
+(
+"
+message
+"
+function
+(
+aEvent
+)
+{
+if
+(
+aEvent
+.
+data
+=
+=
+"
+ContinueTest
+"
+)
+{
+sendMouseEvent
 (
 int_win
 "
-target1
+target0
 "
 "
-touchend
+mousemove
 "
 )
 ;
@@ -246,7 +378,7 @@ sendMouseEvent
 (
 int_win
 "
-target0
+done
 "
 "
 mousemove
@@ -275,6 +407,152 @@ mouseup
 "
 )
 ;
+}
+}
+)
+;
+window
+.
+postMessage
+(
+"
+ContinueTest
+"
+"
+*
+"
+)
+;
+}
+{
+once
+:
+true
+}
+)
+;
+if
+(
+isApzEnabled
+(
+)
+)
+{
+/
+/
+Synthesize
+native
+touch
+events
+to
+let
+apz
+generate
+compatibility
+/
+/
+mouse
+events
+when
+e10s
+enabled
+synthesizeNativeTap
+(
+int_win
+.
+document
+.
+getElementById
+(
+'
+target1
+'
+)
+1
+1
+)
+;
+}
+else
+{
+/
+/
+Synthesize
+touch
+and
+mouse
+events
+when
+e10s
+disabled
+.
+sendTouchEvent
+(
+int_win
+"
+target1
+"
+"
+touchstart
+"
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target1
+"
+"
+mousedown
+"
+)
+;
+sendTouchEvent
+(
+int_win
+"
+target1
+"
+"
+touchmove
+"
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target1
+"
+"
+mousemove
+"
+)
+;
+sendTouchEvent
+(
+int_win
+"
+target1
+"
+"
+touchend
+"
+)
+;
+sendMouseEvent
+(
+int_win
+"
+target1
+"
+"
+mouseup
+"
+)
+;
+}
 }
 <
 /
