Bug 1344957 - Enabling File.createFromNsIFile and File.createFromFileName only for testing and file-content-process, r=ehsan, r=bobowen
UltraBlame original commit: fba648d8582e630aa8e2391015531bb0f212935d

--- a/dom/base/test/chrome/test_bug914381.html
+++ b/dom/base/test/chrome/test_bug914381.html
@@ -389,11 +389,41 @@ bug
 "
 )
 ;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+"
+dom
+.
+file
+.
+createInChild
+"
+]
+}
+)
+.
+then
+(
+(
+)
+=
+>
+{
+return
 File
 .
 createFromNsIFile
 (
 file
+)
+;
+}
 )
 .
 then
