Bug 1348634. P1 - add more debugging logs. r=kaku
MozReview-Commit-ID: FB7XKRLNeVw

UltraBlame original commit: ba5dd37c09ae5f6b9dec58d0d071a4cb9198a270

--- a/dom/media/test/test_load_same_resource.html
+++ b/dom/media/test/test_load_same_resource.html
@@ -767,6 +767,26 @@ MediaDecoder
 Debug
 "
 ]
+[
+"
+logging
+.
+nsMediaElement
+"
+"
+Debug
+"
+]
+[
+"
+logging
+.
+MediaCache
+"
+"
+Debug
+"
+]
 ]
 }
 manager
