Bug 1133423 - Optimize sets of expando properties and expando setter calls on DOM proxies. r=evilpie
UltraBlame original commit: 485abf63b62b29b21b7e7a1cf0fba1940d775166

--- a/dom/bindings/test/test_proxy_expandos.html
+++ b/dom/bindings/test/test_proxy_expandos.html
@@ -215,8 +215,8 @@ function
 testFoo
 (
 obj
-expected
 kind
+expected
 )
 {
 for
@@ -235,11 +235,27 @@ i
 +
 )
 {
+obj
+.
+foo
+=
+i
+;
 is
 (
 obj
 .
 foo
+(
+expected
+=
+=
+=
+undefined
+)
+?
+i
+:
 expected
 "
 Looking
@@ -283,9 +299,6 @@ testFoo
 (
 obj
 "
-bar
-"
-"
 plain
 "
 )
@@ -299,9 +312,16 @@ to
 a
 scripted
 getter
+/
+setter
 .
 var
 count
+=
+0
+;
+var
+getterSetterVal
 =
 0
 ;
@@ -314,6 +334,9 @@ obj
 foo
 "
 {
+configurable
+:
+true
 get
 :
 function
@@ -359,22 +382,69 @@ count
 +
 ;
 return
-123
+getterSetterVal
 ;
 }
-configurable
+set
 :
-true
+function
+(
+v
+)
+{
+is
+(
+this
+obj
+"
+Setter
+should
+have
+the
+proxy
+as
+|
+this
+|
+"
+)
+;
+is
+(
+arguments
+.
+length
+1
+"
+Should
+pass
+1
+argument
+to
+setters
+"
+)
+;
+getterSetterVal
+=
+v
+;
+count
++
++
+;
+}
 }
 )
 ;
 testFoo
 (
 obj
-123
 "
 scripted
 getter
+/
+setter
 "
 )
 ;
@@ -382,12 +452,16 @@ is
 (
 count
 iterations
+*
+2
 "
 Should
 have
 called
 the
 getter
+/
+setter
 enough
 times
 "
@@ -400,6 +474,8 @@ try
 a
 native
 getter
+/
+setter
 .
 Object
 .
@@ -412,11 +488,14 @@ foo
 {
 get
 :
-Object
+Math
 .
-prototype
+abs
+set
+:
+Math
 .
-valueOf
+abs
 configurable
 :
 true
@@ -426,11 +505,13 @@ true
 testFoo
 (
 obj
-obj
 "
 native
 getter
+/
+setter
 "
+NaN
 )
 ;
 }
@@ -469,6 +550,9 @@ var
 count
 =
 0
+getterSetterVal
+=
+0
 ;
 obj
 .
@@ -496,7 +580,23 @@ count
 +
 ;
 return
-2
+getterSetterVal
+;
+}
+set
+:
+function
+(
+v
+)
+{
+getterSetterVal
+=
+v
+;
+count
++
++
 ;
 }
 }
@@ -540,19 +640,20 @@ elem1
 elem2
 "
 ;
+obj
+[
+prop
+]
+=
+i
+;
 is
 (
 obj
 [
 prop
 ]
-(
 i
-&
-1
-)
-+
-1
 "
 Should
 return
@@ -567,14 +668,14 @@ is
 (
 count
 iterations
-/
-2
 "
 Should
 have
 called
 the
 getter
+/
+setter
 enough
 times
 "
