Bug 1341738 - Implement FetchController and FetObserver - part 5 - Dispatching observer events, r=bkelly
UltraBlame original commit: 617238ba19880a705d25c80d0ac5da09d376dddc

--- a/dom/tests/mochitest/fetch/file_fetch_controller.html
+++ b/dom/tests/mochitest/fetch/file_fetch_controller.html
@@ -565,9 +565,9 @@ abort
 fetch
 (
 '
-data
-:
-foo
+slow
+.
+sjs
 '
 {
 signal
@@ -649,9 +649,9 @@ p
 fetch
 (
 '
-data
-:
-foo
+slow
+.
+sjs
 '
 {
 signal
@@ -727,149 +727,17 @@ testWorkerAbortedFetch
 (
 )
 {
-function
-worker
-(
-)
-{
-var
-fc
-=
-new
-FetchController
-(
-)
-;
-fc
-.
-abort
-(
-)
-;
-fetch
-(
-'
-data
-:
-foo
-'
-{
-signal
-:
-fc
-.
-signal
-}
-)
-.
-then
-(
-(
-)
-=
->
-{
-postMessage
-(
-false
-)
-;
-}
-e
-=
->
-{
-postMessage
-(
-e
-.
-name
-=
-=
-"
-AbortError
-"
-)
-;
-}
-)
-;
-}
-var
-str
-=
-worker
-.
-toString
-(
-)
-;
-var
-content
-=
-str
-.
-substring
-(
-0
-str
-.
-length
--
-1
-)
-.
-split
-(
-'
-\
-n
-'
-)
-.
-splice
-(
-1
-)
-.
-join
-(
-'
-'
-)
-;
-var
-url
-=
-URL
-.
-createObjectURL
-(
-new
-Blob
-(
-[
-content
-]
-{
-type
-:
-"
-application
-/
-javascript
-"
-}
-)
-)
-;
 var
 w
 =
 new
 Worker
 (
-url
+'
+worker_fetch_controller
+.
+js
+'
 )
 ;
 w
@@ -901,160 +769,32 @@ next
 )
 ;
 }
+w
+.
+postMessage
+(
+'
+testWorkerAbortedFetch
+'
+)
+;
 }
 function
 testWorkerFetchAndAbort
 (
 )
 {
-function
-worker
-(
-)
-{
-var
-fc
-=
-new
-FetchController
-(
-)
-;
-var
-p
-=
-fetch
-(
-'
-data
-:
-foo
-'
-{
-signal
-:
-fc
-.
-signal
-}
-)
-;
-fc
-.
-abort
-(
-)
-;
-p
-.
-then
-(
-(
-)
-=
->
-{
-postMessage
-(
-false
-)
-;
-}
-e
-=
->
-{
-postMessage
-(
-e
-.
-name
-=
-=
-"
-AbortError
-"
-)
-;
-}
-)
-;
-}
-var
-str
-=
-worker
-.
-toString
-(
-)
-;
-var
-content
-=
-str
-.
-substring
-(
-0
-str
-.
-length
--
-1
-)
-.
-split
-(
-'
-\
-n
-'
-)
-.
-splice
-(
-1
-)
-.
-join
-(
-'
-'
-)
-;
-var
-url
-=
-URL
-.
-createObjectURL
-(
-new
-Blob
-(
-[
-content
-]
-{
-type
-:
-"
-application
-/
-javascript
-"
-}
-)
-)
-;
 var
 w
 =
 new
 Worker
 (
-url
+'
+worker_fetch_controller
+.
+js
+'
 )
 ;
 w
@@ -1086,6 +826,15 @@ next
 )
 ;
 }
+w
+.
+postMessage
+(
+'
+testWorkerFetchAndAbort
+'
+)
+;
 }
 var
 steps
