--- a/devtools/server/tests/mochitest/test_device.html
+++ b/devtools/server/tests/mochitest/test_device.html
@@ -412,35 +412,12 @@ navigator
 userAgent
 locale
 :
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-chrome
-/
-chrome
--
-registry
-;
-1
-"
-]
+locale
 .
-getService
+getAppLocaleAsLangTag
 (
-Ci
-.
-nsIXULChromeRegistry
-)
-.
-getSelectedLocale
-(
-"
-global
-"
 )
 os
 :
