Backed out changeset cc308a73ad05 (bug 1347314) for eslint failure in test_device.html. r=backout
UltraBlame original commit: 48e124a57b7f296c7708bb852163844dce8c6363

--- a/devtools/server/tests/mochitest/test_device.html
+++ b/devtools/server/tests/mochitest/test_device.html
@@ -412,12 +412,35 @@ navigator
 userAgent
 locale
 :
-Services
+Cc
+[
+"
+mozilla
 .
-locale
+org
+/
+chrome
+/
+chrome
+-
+registry
+;
+1
+"
+]
 .
-getAppLocaleAsLangTag
+getService
 (
+Ci
+.
+nsIXULChromeRegistry
+)
+.
+getSelectedLocale
+(
+"
+global
+"
 )
 os
 :
