Bug 1347314 - Migrate calls to ChromeRegistry::GetSelectedLocale to use LocaleService::GetAppLocale. r=jfkthame,Pike
In cases, where the caller is looking for the locale to be used for JS Intl API,
we can now replace it with `undefined` which causes JS Intl API to use the default
locale which since bug 1346674 is resolved to the app locale.

This allows us to remove a lot of calls for the app locale.

The remaining ones are split between `AsBCP47` and `AsLangTag`.
Here, the `AsLangTag` is used, as described in the API docs, for cases where
the language string is used for localization purposes, such as language negotaition
matching to our language resources etc.
`AsBCP47` is used when the returned value is handed over to ICU API.

MozReview-Commit-ID: DzmFEUvMq3N

UltraBlame original commit: 8601c8d5b76dcb7824e801e1f4035b939d79b691

--- a/devtools/server/tests/mochitest/test_device.html
+++ b/devtools/server/tests/mochitest/test_device.html
@@ -152,13 +152,6 @@ Components
 utils
 ;
 const
-Cc
-=
-Components
-.
-classes
-;
-const
 Ci
 =
 Components
@@ -412,35 +405,12 @@ navigator
 userAgent
 locale
 :
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-chrome
-/
-chrome
--
-registry
-;
-1
-"
-]
+locale
 .
-getService
+getAppLocaleAsLangTag
 (
-Ci
-.
-nsIXULChromeRegistry
-)
-.
-getSelectedLocale
-(
-"
-global
-"
 )
 os
 :
