Bug 1348660 - Part 2: Rename usage related methods and structures to express the relation to a concrete origin; r=btseng
UltraBlame original commit: c0d0402b8bb0d22cb0b9e33c91b2277d77107100

--- a/dom/indexedDB/test/test_file_os_delete.html
+++ b/dom/indexedDB/test/test_file_os_delete.html
@@ -140,7 +140,7 @@ objectStoreName
 Blobs
 "
 ;
-getUsage
+getCurrentUsage
 (
 grabFileUsageAndContinueHandler
 )
@@ -401,7 +401,7 @@ type
 "
 )
 ;
-getUsage
+getCurrentUsage
 (
 grabFileUsageAndContinueHandler
 )
@@ -493,7 +493,7 @@ type
 "
 )
 ;
-getUsage
+getCurrentUsage
 (
 grabFileUsageAndContinueHandler
 )
@@ -568,7 +568,7 @@ flushPendingFileDeletions
 (
 )
 ;
-getUsage
+getCurrentUsage
 (
 grabFileUsageAndContinueHandler
 )
