--- a/devtools/client/inspector/boxmodel/test/doc_boxmodel_iframe2.html
+++ b/devtools/client/inspector/boxmodel/test/doc_boxmodel_iframe2.html
@@ -20,6 +20,13 @@ background
 :
 red
 ;
+box
+-
+sizing
+:
+border
+-
+box
 "
 >
 iframe
@@ -55,6 +62,13 @@ background
 :
 yellow
 ;
+box
+-
+sizing
+:
+border
+-
+box
 '
 >
 iframe
