Bug 1339775 - Add role="checkbox" for specially styled in-content checkboxes. r=jaws
MozReview-Commit-ID: IZhRECggz4j

UltraBlame original commit: 3be6c2cbcf85f76314e3ee9f9ccf9e35bf5242b2

--- a/browser/base/content/aboutTabCrashed.xhtml
+++ b/browser/base/content/aboutTabCrashed.xhtml
@@ -522,6 +522,11 @@ id
 "
 sendReport
 "
+role
+=
+"
+checkbox
+"
 /
 >
 <
@@ -610,6 +615,11 @@ id
 "
 includeURL
 "
+role
+=
+"
+checkbox
+"
 /
 >
 <
@@ -669,6 +679,11 @@ id
 =
 "
 emailMe
+"
+role
+=
+"
+checkbox
 "
 /
 >
@@ -772,6 +787,11 @@ id
 =
 "
 autoSubmit
+"
+role
+=
+"
+checkbox
 "
 /
 >
