--- a/toolkit/content/aboutNetworking.xhtml
+++ b/toolkit/content/aboutNetworking.xhtml
@@ -377,6 +377,11 @@ checked
 "
 yes
 "
+role
+=
+"
+checkbox
+"
 /
 >
 <
@@ -771,6 +776,11 @@ name
 =
 "
 Autorefresh
+"
+role
+=
+"
+checkbox
 "
 /
 >
