Bug 1299937 - Part 5: Add gamepad extension API tests; r=Lenzak,qdot
MozReview-Commit-ID: ICeDyGUn4XH

UltraBlame original commit: 3c1984bdf4047df79fde8e84264f17de80351f20

--- a/dom/tests/mochitest/gamepad/test_navigator_gamepads.html
+++ b/dom/tests/mochitest/gamepad/test_navigator_gamepads.html
@@ -296,11 +296,15 @@ id
 GamepadService
 .
 standardMapping
+GamepadService
+.
+noHand
 4
 /
 /
 buttons
 2
+0
 )
 .
 then
@@ -485,11 +489,15 @@ id
 GamepadService
 .
 standardMapping
+GamepadService
+.
+noHand
 4
 /
 /
 buttons
 2
+0
 )
 .
 then
