Bug 1299937 - Part 6: Handle Stop vibrating when the window defoucses; r=qdot
MozReview-Commit-ID: Kvd40jnSPvK

UltraBlame original commit: 5d8e162ef5f73106037a6ad5c34770f26ab86447

--- a/dom/tests/mochitest/gamepad/test_gamepad_extensions.html
+++ b/dom/tests/mochitest/gamepad/test_gamepad_extensions.html
@@ -377,11 +377,6 @@ false
 )
 ;
 }
-runGamepadTest
-(
-startTest
-)
-;
 function
 startTest
 (
@@ -882,6 +877,60 @@ pressButton
 ;
 }
 function
+setFrameVisible
+(
+f
+visible
+)
+{
+var
+Ci
+=
+SpecialPowers
+.
+Ci
+;
+var
+docshell
+=
+SpecialPowers
+.
+wrap
+(
+f
+.
+contentWindow
+)
+.
+QueryInterface
+(
+Ci
+.
+nsIInterfaceRequestor
+)
+.
+getInterface
+(
+Ci
+.
+nsIWebNavigation
+)
+.
+QueryInterface
+(
+Ci
+.
+nsIDocShell
+)
+;
+docshell
+.
+isActive
+=
+visible
+;
+}
+function
 haptictest
 (
 )
@@ -952,10 +1001,75 @@ finish
 }
 )
 ;
+/
+/
+When
+page
+is
+background
+we
+should
+stop
+our
+haptics
+and
+still
+/
+/
+can
+get
+the
+promise
+.
+var
+f1
+=
+document
+.
+getElementById
+(
+'
+f1
+'
+)
+;
+setFrameVisible
+(
+f1
+false
+)
+;
 }
 <
 /
 script
+>
+<
+iframe
+id
+=
+"
+f1
+"
+src
+=
+"
+gamepad_frame_state
+.
+html
+"
+onload
+=
+"
+runGamepadTest
+(
+startTest
+)
+"
+>
+<
+/
+iframe
 >
 <
 /
