Bug 1347758 - part5 : add tests. r=Ehsan
Add tests for non-in-tree media element, web-audio and plug-in.

MozReview-Commit-ID: 2BMzUHPjKWX

UltraBlame original commit: 2abce19f5001f97ff7df214cb2a92b6d81ffa0be

--- a/toolkit/content/tests/browser/file_webAudio.html
+++ b/toolkit/content/tests/browser/file_webAudio.html
@@ -53,25 +53,60 @@ encoding
 head
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+>
+var
+ac
+=
+new
+AudioContext
+(
+)
+;
+var
+dest
+=
+ac
+.
+destination
+;
+var
+osc
+=
+ac
+.
+createOscillator
+(
+)
+;
+osc
+.
+connect
+(
+dest
+)
+;
+osc
+.
+start
+(
+)
+;
+<
+/
+script
+>
+<
 body
 >
 <
-audio
-id
-=
-"
-testAudio
-"
-src
-=
-"
-audio
-.
-ogg
-"
-loop
->
-<
 /
-audio
+body
 >
