Bug 1345119 - Part 5: Fix eslint errors in unit tests. r=me
UltraBlame original commit: 7145d2ae3fab42d776cad260afdb5ec6e3e23f9b

--- a/devtools/server/tests/mochitest/test_inspector_getOffsetParent.html
+++ b/devtools/server/tests/mochitest/test_inspector_getOffsetParent.html
@@ -154,21 +154,10 @@ application
 javascript
 "
 >
-const
-inspector
-=
-require
-(
 "
-devtools
-/
-shared
-/
-fronts
-/
-inspector
+use
+strict
 "
-)
 ;
 window
 .
@@ -189,6 +178,7 @@ runNextTest
 )
 ;
 }
+;
 var
 gWalker
 ;
@@ -337,6 +327,9 @@ absolutely
 positioned
 inside
 a
+"
++
+"
 relative
 node
 "
@@ -465,6 +458,9 @@ absolutely
 positioned
 outside
 a
+"
++
+"
 relative
 node
 "
