--- a/devtools/server/tests/mochitest/inspector_getOffsetParent.html
+++ b/devtools/server/tests/mochitest/inspector_getOffsetParent.html
@@ -98,6 +98,11 @@ div
 <
 script
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -113,14 +118,16 @@ opener
 .
 postMessage
 (
-'
+"
 ready
-'
-'
+"
+"
 *
-'
+"
 )
+;
 }
+;
 <
 /
 script
