Backed out changeset 7145d2ae3fab (bug 1345119)
UltraBlame original commit: 5d8420156bc280ee05562d6bcf9093ffa2360b0a

--- a/devtools/server/tests/mochitest/test_inspector_getOffsetParent.html
+++ b/devtools/server/tests/mochitest/test_inspector_getOffsetParent.html
@@ -154,10 +154,21 @@ application
 javascript
 "
 >
+const
+inspector
+=
+require
+(
 "
-use
-strict
+devtools
+/
+shared
+/
+fronts
+/
+inspector
 "
+)
 ;
 window
 .
@@ -178,7 +189,6 @@ runNextTest
 )
 ;
 }
-;
 var
 gWalker
 ;
@@ -327,9 +337,6 @@ absolutely
 positioned
 inside
 a
-"
-+
-"
 relative
 node
 "
@@ -458,9 +465,6 @@ absolutely
 positioned
 outside
 a
-"
-+
-"
 relative
 node
 "
