--- a/mobile/android/tests/browser/chrome/test_shared_preferences.html
+++ b/mobile/android/tests/browser/chrome/test_shared_preferences.html
@@ -212,6 +212,27 @@ application
 /
 javascript
 "
+src
+=
+"
+head
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
 >
 Components
 .
@@ -280,83 +301,6 @@ let
 _observerId
 =
 0
-;
-function
-makeObserver
-(
-)
-{
-let
-deferred
-=
-Promise
-.
-defer
-(
-)
-;
-let
-ret
-=
-{
-id
-:
-_observerId
-+
-+
-count
-:
-0
-promise
-:
-deferred
-.
-promise
-observe
-:
-function
-(
-subject
-topic
-data
-)
-{
-ret
-.
-count
-+
-=
-1
-;
-let
-msg
-=
-{
-subject
-:
-subject
-topic
-:
-topic
-data
-:
-data
-}
-;
-deferred
-.
-resolve
-(
-msg
-)
-;
-}
-}
-;
-return
-ret
-;
-}
 ;
 add_task
 (
@@ -1006,6 +950,9 @@ obs1
 =
 makeObserver
 (
+_observerId
++
++
 )
 ;
 branch
@@ -1180,6 +1127,9 @@ obs2
 =
 makeObserver
 (
+_observerId
++
++
 )
 ;
 branch
@@ -1359,6 +1309,9 @@ obs
 =
 makeObserver
 (
+_observerId
++
++
 )
 ;
 branch
@@ -1574,6 +1527,9 @@ obs
 =
 makeObserver
 (
+_observerId
++
++
 )
 ;
 branch
