Bug 1265818 - Part 5 - Tidy up and improve mobile scroll position test. r=sebastian
Just as the comparable test on desktop we should use a really big document with enough space for scrolling in both Y *and* X directions. We should also randomise the scroll positions used for testing instead of hardcoding them.

MozReview-Commit-ID: 9FvaOnaKJ6

UltraBlame original commit: 4bebc1d2c56e9c57b8aa0dad9a513c6129df56bd

--- a/mobile/android/tests/browser/chrome/test_session_scroll_position.html
+++ b/mobile/android/tests/browser/chrome/test_session_scroll_position.html
@@ -27,6 +27,40 @@ cgi
 id
 =
 810981
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1282902
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1301016
 -
 -
 >
@@ -46,10 +80,12 @@ utf
 <
 title
 >
-Test
+Tests
 for
 Bug
 810981
+1282902
+1301016
 <
 /
 title
@@ -216,10 +252,12 @@ javascript
 /
 *
 *
-Test
+Tests
 for
 Bug
 810981
+1282902
+1301016
 *
 *
 /
@@ -324,35 +362,43 @@ jsm
 The
 chrome
 window
+and
+friends
 .
 let
 chromeWin
-;
-/
-/
-Track
-the
-tabs
-where
-the
-tests
-are
-happening
+=
+Services
 .
+wm
+.
+getMostRecentWindow
+(
+"
+navigator
+:
+browser
+"
+)
+;
 let
-tabScroll
+BrowserApp
+=
+chromeWin
+.
+BrowserApp
 ;
 /
 /
 Use
 something
 with
-enough
-content
-to
-allow
+ample
+space
 for
 scrolling
+and
+zooming
 .
 const
 URL
@@ -378,49 +424,7 @@ browser
 /
 chrome
 /
-basic_article_mobile
-.
-html
-"
-;
-/
-/
-Something
-to
-test
-the
-zoom
-level
-scaling
-on
-rotation
-with
-.
-const
-URL_desktop
-=
-"
-http
-:
-/
-/
-example
-.
-org
-/
-chrome
-/
-mobile
-/
-android
-/
-tests
-/
-browser
-/
-chrome
-/
-basic_article
+browser_scrollPositions_sample
 .
 html
 "
@@ -466,6 +470,98 @@ org
 .
 html
 "
+;
+/
+/
+Randomized
+set
+of
+scroll
+positions
+and
+zoom
+factors
+we
+will
+use
+in
+this
+test
+.
+const
+SCROLL_X
+=
+Math
+.
+round
+(
+100
+*
+(
+1
++
+Math
+.
+random
+(
+)
+)
+)
+;
+const
+SCROLL_Y
+=
+Math
+.
+round
+(
+200
+*
+(
+1
++
+Math
+.
+random
+(
+)
+)
+)
+;
+const
+SCROLL_STR
+=
+SCROLL_X
++
+"
+"
++
+SCROLL_Y
+;
+const
+SCROLL_STR_Y_ONLY
+=
+0
++
+"
+"
++
+SCROLL_Y
+;
+const
+ZOOM
+=
+1
++
+0
+.
+5
+*
+Math
+.
+random
+(
+)
 ;
 function
 dispatchUIEvent
@@ -569,6 +665,58 @@ zoom
 )
 ;
 }
+/
+/
+Track
+the
+tabs
+where
+the
+tests
+are
+happening
+.
+let
+tabScroll
+;
+function
+cleanupTabs
+(
+)
+{
+if
+(
+tabScroll
+)
+{
+BrowserApp
+.
+closeTab
+(
+tabScroll
+)
+;
+tabScroll
+=
+null
+;
+}
+}
+SimpleTest
+.
+registerCleanupFunction
+(
+function
+(
+)
+{
+cleanupTabs
+(
+)
+;
+}
+)
+;
 let
 ss
 =
@@ -598,455 +746,10 @@ add_task
 (
 function
 *
-test_sessionStoreScrollPosition
-(
-)
-{
-const
-SCROLL_X
-=
-0
-;
-const
-SCROLL_Y
-=
-38
-;
-chromeWin
-=
-Services
-.
-wm
-.
-getMostRecentWindow
-(
-"
-navigator
-:
-browser
-"
-)
-;
-let
-BrowserApp
-=
-chromeWin
-.
-BrowserApp
-;
-/
-/
-Creates
-a
-tab
-sets
-a
-scroll
-position
-and
-closes
-the
-tab
-.
-function
-createAndRemoveTab
-(
-)
-{
-return
-Task
-.
-spawn
-(
-function
-*
-(
-)
-{
-/
-/
-Create
-a
-new
-tab
-.
-tabScroll
-=
-BrowserApp
-.
-addTab
-(
-URL
-)
-;
-let
-browser
-=
-tabScroll
-.
-browser
-;
-yield
-promiseBrowserEvent
-(
-browser
-"
-pageshow
-"
-)
-;
-/
-/
-Modify
-scroll
-position
-.
-setScrollPosition
-(
-browser
-SCROLL_X
-SCROLL_Y
-)
-;
-yield
-promiseTabEvent
-(
-browser
-"
-SSTabScrollCaptured
-"
-)
-;
-/
-/
-Check
-that
-we
-'
-ve
-actually
-scrolled
-.
-let
-ifreq
-=
-browser
-.
-contentWindow
-.
-QueryInterface
-(
-Ci
-.
-nsIInterfaceRequestor
-)
-;
-let
-utils
-=
-ifreq
-.
-getInterface
-(
-Ci
-.
-nsIDOMWindowUtils
-)
-;
-let
-scrollX
-=
-{
-}
-scrollY
-=
-{
-}
-;
-utils
-.
-getScrollXY
-(
-false
-scrollX
-scrollY
-)
-;
-is
-(
-scrollX
-.
-value
-SCROLL_X
-"
-scrollX
-set
-correctly
-"
-)
-;
-is
-(
-scrollY
-.
-value
-SCROLL_Y
-"
-scrollY
-set
-correctly
-"
-)
-;
-/
-/
-Remove
-the
-tab
-.
-BrowserApp
-.
-closeTab
-(
-tabScroll
-)
-;
-yield
-promiseTabEvent
-(
-browser
-"
-SSTabCloseProcessed
-"
-)
-;
-}
-)
-;
-}
-yield
-createAndRemoveTab
-(
-)
-;
-let
-state
-=
-ss
-.
-getClosedTabs
-(
-chromeWin
-)
-;
-let
-[
-{
-scrolldata
-}
-]
-=
-state
-;
-is
-(
-scrolldata
-.
-scroll
-SCROLL_X
-+
-"
-"
-+
-SCROLL_Y
-"
-stored
-scroll
-position
-is
-correct
-"
-)
-;
-/
-/
-Restore
-the
-closed
-tab
-.
-let
-closedTabData
-=
-ss
-.
-getClosedTabs
-(
-chromeWin
-)
-[
-0
-]
-;
-let
-browser
-=
-ss
-.
-undoCloseTab
-(
-chromeWin
-closedTabData
-)
-;
-yield
-promiseBrowserEvent
-(
-browser
-"
-pageshow
-"
-)
-;
-/
-/
-Check
-the
-scroll
-position
-.
-let
-ifreq
-=
-browser
-.
-contentWindow
-.
-QueryInterface
-(
-Ci
-.
-nsIInterfaceRequestor
-)
-;
-let
-utils
-=
-ifreq
-.
-getInterface
-(
-Ci
-.
-nsIDOMWindowUtils
-)
-;
-let
-scrollX
-=
-{
-}
-scrollY
-=
-{
-}
-;
-utils
-.
-getScrollXY
-(
-false
-scrollX
-scrollY
-)
-;
-is
-(
-scrollX
-.
-value
-SCROLL_X
-"
-scrollX
-restored
-correctly
-"
-)
-;
-is
-(
-scrollY
-.
-value
-SCROLL_Y
-"
-scrollY
-restored
-correctly
-"
-)
-;
-/
-/
-Remove
-the
-tab
-.
-BrowserApp
-.
-closeTab
-(
-BrowserApp
-.
-getTabForBrowser
-(
-browser
-)
-)
-;
-}
-)
-;
-add_task
-(
-function
-*
 test_sessionStoreScrollPositionReaderMode
 (
 )
 {
-const
-SCROLL_X
-=
-0
-;
-const
-SCROLL_Y
-=
-44
-;
-chromeWin
-=
-Services
-.
-wm
-.
-getMostRecentWindow
-(
-"
-navigator
-:
-browser
-"
-)
-;
-let
-BrowserApp
-=
-chromeWin
-.
-BrowserApp
-;
 /
 /
 Creates
@@ -1117,7 +820,7 @@ position
 setScrollPosition
 (
 browser
-SCROLL_X
+0
 SCROLL_Y
 )
 ;
@@ -1190,7 +893,7 @@ is
 scrollX
 .
 value
-SCROLL_X
+0
 "
 scrollX
 set
@@ -1266,12 +969,7 @@ is
 scrolldata
 .
 scroll
-SCROLL_X
-+
-"
-"
-+
-SCROLL_Y
+SCROLL_STR_Y_ONLY
 "
 stored
 scroll
@@ -1378,7 +1076,7 @@ is
 scrollX
 .
 value
-SCROLL_X
+0
 "
 scrollX
 restored
@@ -1424,49 +1122,10 @@ add_task
 (
 function
 *
-test_sessionStoreZoomLevel
+test_sessionStoreScrollPositionAndZoomLevel
 (
 )
 {
-const
-ZOOM
-=
-4
-.
-2
-;
-const
-SCROLL_X
-=
-42
-;
-const
-SCROLL_Y
-=
-42
-;
-chromeWin
-=
-Services
-.
-wm
-.
-getMostRecentWindow
-(
-"
-navigator
-:
-browser
-"
-)
-;
-let
-BrowserApp
-=
-chromeWin
-.
-BrowserApp
-;
 /
 /
 Creates
@@ -1727,12 +1386,7 @@ is
 scrolldata
 .
 scroll
-SCROLL_X
-+
-"
-"
-+
-SCROLL_Y
+SCROLL_STR
 "
 stored
 scroll
@@ -1939,45 +1593,6 @@ test_sessionStoreZoomLevelRecalc
 (
 )
 {
-const
-ZOOM
-=
-4
-.
-2
-;
-const
-SCROLL_X
-=
-42
-;
-const
-SCROLL_Y
-=
-42
-;
-chromeWin
-=
-Services
-.
-wm
-.
-getMostRecentWindow
-(
-"
-navigator
-:
-browser
-"
-)
-;
-let
-BrowserApp
-=
-chromeWin
-.
-BrowserApp
-;
 /
 /
 Creates
@@ -2023,7 +1638,7 @@ BrowserApp
 .
 addTab
 (
-URL_desktop
+URL
 )
 ;
 let
@@ -2238,12 +1853,7 @@ is
 scrolldata
 .
 scroll
-SCROLL_X
-+
-"
-"
-+
-SCROLL_Y
+SCROLL_STR
 "
 stored
 scroll
@@ -2550,6 +2160,78 @@ id
 Mozilla
 Bug
 810981
+<
+/
+a
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1282902
+"
+>
+Mozilla
+Bug
+1282902
+<
+/
+a
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1301016
+"
+>
+Mozilla
+Bug
+1301016
 <
 /
 a
