Bug 1265818 - Part 6 - Test PresState restoring on Android, too. r=sebastian
Expand the existing test by navigating to a different page and then going back after the tab has been restored again.

Proper restoration of the zoom level for anything other than the current history entry depends on resolution of bug 1312605.

MozReview-Commit-ID: Aspg2RRcY53

UltraBlame original commit: e2240273ffc2b50560a9883a682256278db2cb1b

--- a/mobile/android/tests/browser/chrome/test_session_scroll_position.html
+++ b/mobile/android/tests/browser/chrome/test_session_scroll_position.html
@@ -61,6 +61,23 @@ cgi
 id
 =
 1301016
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1265818
 -
 -
 >
@@ -86,6 +103,7 @@ Bug
 810981
 1282902
 1301016
+1265818
 <
 /
 title
@@ -258,6 +276,7 @@ Bug
 810981
 1282902
 1301016
+1265818
 *
 *
 /
@@ -431,6 +450,54 @@ html
 ;
 /
 /
+Same
+content
+but
+under
+a
+different
+URL
+so
+we
+have
+something
+to
+navigate
+to
+and
+from
+.
+const
+URL2
+=
+"
+http
+:
+/
+/
+example
+.
+org
+/
+chrome
+/
+mobile
+/
+android
+/
+tests
+/
+browser
+/
+chrome
+/
+browser_scrollPositions_sample2
+.
+html
+"
+;
+/
+/
 Reader
 mode
 URL
@@ -552,6 +619,73 @@ const
 ZOOM
 =
 1
++
+0
+.
+5
+*
+Math
+.
+random
+(
+)
+;
+const
+SCROLL2_X
+=
+Math
+.
+round
+(
+300
+*
+(
+1
++
+Math
+.
+random
+(
+)
+)
+)
+;
+const
+SCROLL2_Y
+=
+Math
+.
+round
+(
+400
+*
+(
+1
++
+Math
+.
+random
+(
+)
+)
+)
+;
+const
+SCROLL2_STR
+=
+SCROLL2_X
++
+"
+"
++
+SCROLL2_Y
+;
+const
+ZOOM2
+=
+1
+.
+5
 +
 0
 .
@@ -1333,6 +1467,117 @@ correctly
 ;
 /
 /
+Navigate
+to
+a
+different
+page
+and
+scroll
+/
+zoom
+there
+as
+well
+.
+browser
+.
+loadURI
+(
+URL2
+)
+;
+yield
+promiseBrowserEvent
+(
+browser
+"
+pageshow
+"
+)
+;
+setZoomLevel
+(
+browser
+ZOOM2
+)
+;
+setScrollPosition
+(
+browser
+SCROLL2_X
+SCROLL2_Y
+)
+;
+yield
+promiseTabEvent
+(
+browser
+"
+SSTabScrollCaptured
+"
+)
+;
+utils
+.
+getResolution
+(
+zoom
+)
+;
+utils
+.
+getScrollXY
+(
+false
+scrollX
+scrollY
+)
+;
+ok
+(
+fuzzyEquals
+(
+zoom
+.
+value
+ZOOM2
+)
+"
+zoom
+set
+correctly
+"
+)
+;
+is
+(
+scrollX
+.
+value
+SCROLL2_X
+"
+scrollX
+set
+correctly
+"
+)
+;
+is
+(
+scrollY
+.
+value
+SCROLL2_Y
+"
+scrollY
+set
+correctly
+"
+)
+;
+/
+/
 Remove
 the
 tab
@@ -1386,7 +1631,7 @@ is
 scrolldata
 .
 scroll
-SCROLL_STR
+SCROLL2_STR
 "
 stored
 scroll
@@ -1405,7 +1650,7 @@ scrolldata
 zoom
 .
 resolution
-ZOOM
+ZOOM2
 )
 "
 stored
@@ -1447,7 +1692,9 @@ chromeWin
 closedTabData
 )
 ;
-yield
+let
+pageshow
+=
 promiseBrowserEvent
 (
 browser
@@ -1455,6 +1702,23 @@ browser
 pageshow
 "
 )
+;
+let
+scroll
+=
+promiseBrowserEvent
+(
+browser
+"
+scroll
+"
+)
+;
+yield
+pageshow
+;
+yield
+scroll
 ;
 /
 /
@@ -1529,6 +1793,130 @@ fuzzyEquals
 zoom
 .
 value
+ZOOM2
+)
+"
+zoom
+restored
+correctly
+"
+)
+;
+is
+(
+scrollX
+.
+value
+SCROLL2_X
+"
+scrollX
+restored
+correctly
+"
+)
+;
+is
+(
+scrollY
+.
+value
+SCROLL2_Y
+"
+scrollY
+restored
+correctly
+"
+)
+;
+/
+/
+Now
+go
+back
+in
+history
+and
+check
+that
+the
+scroll
+position
+/
+/
+is
+restored
+there
+as
+well
+.
+is
+(
+browser
+.
+canGoBack
+true
+"
+can
+go
+back
+"
+)
+;
+pageshow
+=
+promiseBrowserEvent
+(
+browser
+"
+pageshow
+"
+)
+;
+scroll
+=
+promiseBrowserEvent
+(
+browser
+"
+scroll
+"
+)
+;
+browser
+.
+goBack
+(
+)
+;
+yield
+pageshow
+;
+yield
+scroll
+;
+utils
+.
+getResolution
+(
+zoom
+)
+;
+utils
+.
+getScrollXY
+(
+false
+scrollX
+scrollY
+)
+;
+todo
+(
+fuzzyEquals
+(
+zoom
+.
+value
 ZOOM
 )
 "
@@ -1538,6 +1926,10 @@ correctly
 "
 )
 ;
+/
+/
+Bug
+1312605
 is
 (
 scrollX
@@ -2232,6 +2624,42 @@ id
 Mozilla
 Bug
 1301016
+<
+/
+a
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1265818
+"
+>
+Mozilla
+Bug
+1265818
 <
 /
 a
