Bug 1320744 - Part 4, Allow iframes in test_bug440572.html to be loaded out of sequence. r=mrbkap.
MozReview-Commit-ID: Hl7kGHP6ILQ

UltraBlame original commit: e2a697abd5d350428bdc7724ac043d2303b1c0c2

--- a/dom/tests/mochitest/bugs/iframe_bug440572.html
+++ b/dom/tests/mochitest/bugs/iframe_bug440572.html
@@ -27,6 +27,12 @@ parent
 .
 postMessage
 (
+{
+from
+:
+name
+result
+:
 success
 ?
 "
@@ -36,6 +42,7 @@ success
 "
 failure
 "
+}
 "
 http
 :
@@ -59,11 +66,18 @@ parent
 .
 postMessage
 (
+{
+from
+:
+name
+result
+:
 e
 .
 toString
 (
 )
+}
 "
 http
 :
