--- a/dom/tests/mochitest/bugs/test_bug440572.html
+++ b/dom/tests/mochitest/bugs/test_bug440572.html
@@ -176,8 +176,10 @@ Bug
 var
 messages
 =
-[
-]
+new
+Map
+(
+)
 ;
 function
 receiveMessage
@@ -208,11 +210,18 @@ sender
 ;
 messages
 .
-push
+set
 (
 e
 .
 data
+.
+from
+e
+.
+data
+.
+result
 )
 ;
 }
@@ -235,7 +244,7 @@ is
 (
 messages
 .
-length
+size
 3
 "
 received
@@ -251,9 +260,13 @@ messages
 is
 (
 messages
-[
-0
-]
+.
+get
+(
+"
+test
+"
+)
 "
 success
 "
@@ -269,9 +282,13 @@ failed
 isnot
 (
 messages
-[
-1
-]
+.
+get
+(
+"
+content
+"
+)
 "
 success
 "
@@ -298,9 +315,13 @@ Window
 isnot
 (
 messages
-[
-2
-]
+.
+get
+(
+"
+dump
+"
+)
 "
 success
 "
