Bug 1343589 - Move tests for reversing an animation to the timing-model folder r=hiro
We are gradually line the tests up better with sections in the spec. Given that
these tests are concerned with testing the "reverse an animation" procedure in
the spec (and not the API per se) they should be moved to an appropriate
subdirectory of timing-model.

We also update the test titles to make it clear that these tests are really
covering the timing model, not the API.

MozReview-Commit-ID: J5gc3HZg9qv

UltraBlame original commit: 758adbef7005e9473113a0971114f3e2d7abdff1

--- a/testing/web-platform/tests/web-animations/timing-model/animations/reversing-an-animation.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animations/reversing-an-animation.html
@@ -14,11 +14,9 @@ utf
 <
 title
 >
-Animation
-.
-reverse
-(
-)
+Reversing
+an
+animation
 <
 /
 title
@@ -48,11 +46,11 @@ web
 animations
 /
 #
-dom
+reverse
+-
+an
 -
 animation
--
-reverse
 "
 >
 <
@@ -276,11 +274,13 @@ inverted
 ;
 }
 '
-reverse
-(
-)
+Reversing
+an
+animation
 inverts
-playbackRate
+the
+playback
+rate
 '
 )
 ;
@@ -394,13 +394,11 @@ reverse
 ;
 }
 '
-reverse
-(
-)
-starts
-to
-play
-when
+Reversing
+an
+animation
+plays
+a
 pausing
 animation
 '
@@ -458,25 +456,22 @@ currentTime
 *
 MS_PER_SEC
 '
-reverse
-(
-)
+The
+current
+time
 should
 not
 change
-the
-currentTime
-'
-+
-'
-if
-the
-currentTime
+it
 is
 in
 the
 middle
 of
+'
++
+'
+the
 animation
 duration
 '
@@ -484,13 +479,14 @@ duration
 ;
 }
 '
-reverse
-(
-)
+Reversing
+an
+animation
 maintains
 the
 same
-currentTime
+current
+time
 '
 )
 ;
@@ -576,9 +572,9 @@ end
 ;
 }
 '
-reverse
-(
-)
+Reversing
+an
+animation
 when
 playbackRate
 >
@@ -586,7 +582,17 @@ playbackRate
 and
 currentTime
 >
+'
++
+'
 effect
+end
+should
+make
+it
+play
+from
+the
 end
 '
 )
@@ -673,9 +679,9 @@ currentTime
 ;
 }
 '
-reverse
-(
-)
+Reversing
+an
+animation
 when
 playbackRate
 >
@@ -684,6 +690,16 @@ and
 currentTime
 <
 0
+'
++
+'
+should
+make
+it
+play
+from
+the
+end
 '
 )
 ;
@@ -775,9 +791,9 @@ currentTime
 ;
 }
 '
-reverse
-(
-)
+Reversing
+an
+animation
 when
 playbackRate
 <
@@ -786,6 +802,16 @@ and
 currentTime
 <
 0
+'
++
+'
+should
+make
+it
+play
+from
+the
+start
 '
 )
 ;
@@ -877,9 +903,9 @@ end
 ;
 }
 '
-reverse
-(
-)
+Reversing
+an
+animation
 when
 playbackRate
 <
@@ -888,7 +914,17 @@ and
 currentTime
 >
 effect
+'
++
+'
 end
+should
+make
+it
+play
+from
+the
+start
 '
 )
 ;
@@ -988,9 +1024,9 @@ infinity
 ;
 }
 '
-reverse
-(
-)
+Reversing
+an
+animation
 when
 playbackRate
 >
@@ -1010,6 +1046,10 @@ end
 is
 positive
 infinity
+should
+throw
+an
+exception
 '
 )
 ;
@@ -1118,9 +1158,9 @@ infinity
 ;
 }
 '
-reverse
-(
-)
+Reversing
+an
+animation
 when
 playbackRate
 <
@@ -1140,6 +1180,16 @@ end
 is
 positive
 infinity
+should
+make
+it
+play
+'
++
+'
+from
+the
+start
 '
 )
 ;
@@ -1248,14 +1298,24 @@ done
 ;
 }
 '
-reverse
-(
-)
+Reversing
+when
 when
 playbackRate
 =
 =
 0
+should
+preserve
+the
+current
+'
++
+'
+time
+and
+playback
+rate
 '
 )
 ;
