Bug 1343589 - Add comments to test_animation_observers_[a]sync.html to describe how they differ r=hiro
MozReview-Commit-ID: HxhsaOKDAsq

UltraBlame original commit: 57c53ff1d9827624810933b6ad8a9b18e2f57ff7

--- a/dom/animation/test/chrome/test_animation_observers_async.html
+++ b/dom/animation/test/chrome/test_animation_observers_async.html
@@ -21,9 +21,74 @@ only
 MutationObserver
 animation
 notifications
+(
+async
+tests
+)
 <
 /
 title
+>
+<
+!
+-
+-
+This
+file
+contains
+tests
+for
+animation
+mutation
+observers
+that
+require
+some
+asynchronous
+steps
+(
+e
+.
+g
+.
+waiting
+for
+animation
+events
+)
+.
+Where
+possible
+however
+we
+prefer
+to
+write
+synchronous
+tests
+since
+they
+are
+less
+to
+timeout
+when
+run
+on
+automation
+.
+These
+synchronous
+tests
+are
+located
+in
+test_animation_observers_sync
+.
+html
+.
+-
+-
 >
 <
 script
