--- a/dom/animation/test/chrome/test_animation_observers_sync.html
+++ b/dom/animation/test/chrome/test_animation_observers_sync.html
@@ -21,12 +21,73 @@ only
 MutationObserver
 animation
 notifications
-for
+(
 sync
-APIs
+tests
+)
 <
 /
 title
+>
+<
+!
+-
+-
+This
+file
+contains
+synchronous
+tests
+for
+animation
+mutation
+observers
+.
+In
+general
+we
+prefer
+to
+write
+synchronous
+tests
+since
+they
+are
+less
+likely
+to
+timeout
+when
+run
+on
+automation
+.
+Tests
+that
+require
+asynchronous
+steps
+(
+e
+.
+g
+.
+waiting
+on
+events
+)
+should
+be
+added
+to
+test_animations_observers_async
+.
+html
+instead
+.
+-
+-
 >
 <
 script
