--- a/testing/web-platform/tests/web-animations/timing-model/animations/reversing-an-animation.html
+++ b/testing/web-platform/tests/web-animations/timing-model/animations/reversing-an-animation.html
@@ -1174,6 +1174,121 @@ Infinity
 ;
 animation
 .
+currentTime
+=
+-
+200
+*
+MS_PER_SEC
+;
+animation
+.
+playbackRate
+=
+0
+;
+try
+{
+animation
+.
+reverse
+(
+)
+;
+}
+catch
+(
+e
+)
+{
+assert_unreached
+(
+Unexpected
+exception
+when
+calling
+reverse
+(
+)
+:
+{
+e
+}
+)
+;
+}
+}
+'
+Reversing
+animation
+when
+playbackRate
+=
+0
+and
+currentTime
+<
+0
+'
++
+'
+and
+the
+target
+effect
+end
+is
+positive
+infinity
+should
+NOT
+throw
+an
+'
++
+'
+exception
+'
+)
+;
+test
+(
+function
+(
+t
+)
+{
+var
+div
+=
+createDiv
+(
+t
+)
+;
+var
+animation
+=
+div
+.
+animate
+(
+{
+}
+{
+duration
+:
+100
+*
+MS_PER_SEC
+iterations
+:
+Infinity
+}
+)
+;
+animation
+.
 playbackRate
 =
 -
