--- a/mobile/android/tests/browser/chrome/test_session_clear_history.html
+++ b/mobile/android/tests/browser/chrome/test_session_clear_history.html
@@ -596,336 +596,43 @@ It
 .
 "
 ;
-add_task
-(
-function
-*
-test_sessionStoreClearTabHistory
-(
-)
-{
 /
 /
-Add
-a
-new
-tab
-with
-some
-content
-tabTest
-=
-BrowserApp
-.
-addTab
-(
-url1
-{
-selected
-:
-true
-parentId
-:
-BrowserApp
-.
-selectedTab
-.
-id
-}
-)
-;
-yield
-promiseBrowserEvent
-(
-tabTest
-.
-browser
-"
-DOMTitleChanged
-"
-)
-;
-/
-/
-Navigate
-to
-create
-some
-history
-tabTest
-.
-browser
-.
-loadURI
-(
-url2
-)
-;
-yield
-promiseBrowserEvent
-(
-tabTest
-.
-browser
-"
-DOMTitleChanged
-"
-)
-;
-tabTest
-.
-browser
-.
-loadURI
-(
-url3
-)
-;
-yield
-promiseBrowserEvent
-(
-tabTest
-.
-browser
-"
-DOMTitleChanged
-"
-)
-;
-is
-(
-tabTest
-.
-browser
-.
-canGoBack
-true
-"
-can
-go
-back
-"
-)
-;
-tabTest
-.
-browser
-.
-goBack
-(
-)
-;
-yield
-promiseBrowserEvent
-(
-tabTest
-.
-browser
-"
-DOMTitleChanged
-"
-)
-;
-/
-/
-Check
-that
-the
-session
-store
-has
-recorded
-this
-history
-let
-data
-=
-tabTest
-.
-browser
-.
-__SS_data
-;
-is
-(
-data
-.
-entries
-.
-length
-3
-"
-the
-session
-store
-has
-captured
-3
-history
-entries
-"
-)
-;
-is
-(
-data
-.
-index
-2
-"
-history
-index
-is
-correct
-"
-)
-;
-is
-(
-data
-.
-entries
-[
-0
-]
-.
-url
-url1
-"
-URL
+Outside
 of
-first
-history
-entry
-is
-correct
-"
-)
-;
-/
-/
-Clear
-browsing
-history
-let
-sanitize
-=
-{
-history
-:
-true
-}
-;
-let
-notification
-=
-promiseNotification
-(
-"
-sessionstore
--
-state
--
-purge
--
-complete
-"
-)
-;
-BrowserApp
-.
-sanitize
-(
-sanitize
-)
-;
-yield
-notification
-;
-/
-/
-Only
-the
-current
-session
-history
-entry
-should
-remain
-data
-=
-tabTest
-.
-browser
-.
-__SS_data
-;
-is
-(
-data
-.
-entries
-.
-length
-1
-"
-the
-session
-store
-has
-cleared
-all
-previous
-entries
-"
-)
-;
-is
-(
-data
-.
-index
-1
-"
-history
-index
-is
-correct
-"
-)
-;
-is
-(
-data
-.
-entries
-[
-0
-]
-.
-url
-url2
-"
-URL
-of
-first
-history
-entry
-is
-correct
-after
-data
+shutting
+down
 clearing
-"
-)
-;
-cleanupTabs
-(
-)
-;
-}
-)
-;
+history
+will
+trigger
+an
+async
+delete
+/
+/
+of
+the
+session
+files
+.
+To
+avoid
+any
+interference
+from
+that
+here
+this
+test
+/
+/
+therefore
+has
+to
+run
+first
+.
 add_task
 (
 function
@@ -1348,6 +1055,336 @@ ss
 setLoadState
 (
 STATE_RUNNING
+)
+;
+}
+)
+;
+add_task
+(
+function
+*
+test_sessionStoreClearTabHistory
+(
+)
+{
+/
+/
+Add
+a
+new
+tab
+with
+some
+content
+tabTest
+=
+BrowserApp
+.
+addTab
+(
+url1
+{
+selected
+:
+true
+parentId
+:
+BrowserApp
+.
+selectedTab
+.
+id
+}
+)
+;
+yield
+promiseBrowserEvent
+(
+tabTest
+.
+browser
+"
+DOMTitleChanged
+"
+)
+;
+/
+/
+Navigate
+to
+create
+some
+history
+tabTest
+.
+browser
+.
+loadURI
+(
+url2
+)
+;
+yield
+promiseBrowserEvent
+(
+tabTest
+.
+browser
+"
+DOMTitleChanged
+"
+)
+;
+tabTest
+.
+browser
+.
+loadURI
+(
+url3
+)
+;
+yield
+promiseBrowserEvent
+(
+tabTest
+.
+browser
+"
+DOMTitleChanged
+"
+)
+;
+is
+(
+tabTest
+.
+browser
+.
+canGoBack
+true
+"
+can
+go
+back
+"
+)
+;
+tabTest
+.
+browser
+.
+goBack
+(
+)
+;
+yield
+promiseBrowserEvent
+(
+tabTest
+.
+browser
+"
+DOMTitleChanged
+"
+)
+;
+/
+/
+Check
+that
+the
+session
+store
+has
+recorded
+this
+history
+let
+data
+=
+tabTest
+.
+browser
+.
+__SS_data
+;
+is
+(
+data
+.
+entries
+.
+length
+3
+"
+the
+session
+store
+has
+captured
+3
+history
+entries
+"
+)
+;
+is
+(
+data
+.
+index
+2
+"
+history
+index
+is
+correct
+"
+)
+;
+is
+(
+data
+.
+entries
+[
+0
+]
+.
+url
+url1
+"
+URL
+of
+first
+history
+entry
+is
+correct
+"
+)
+;
+/
+/
+Clear
+browsing
+history
+let
+sanitize
+=
+{
+history
+:
+true
+}
+;
+let
+notification
+=
+promiseNotification
+(
+"
+sessionstore
+-
+state
+-
+purge
+-
+complete
+"
+)
+;
+BrowserApp
+.
+sanitize
+(
+sanitize
+)
+;
+yield
+notification
+;
+/
+/
+Only
+the
+current
+session
+history
+entry
+should
+remain
+data
+=
+tabTest
+.
+browser
+.
+__SS_data
+;
+is
+(
+data
+.
+entries
+.
+length
+1
+"
+the
+session
+store
+has
+cleared
+all
+previous
+entries
+"
+)
+;
+is
+(
+data
+.
+index
+1
+"
+history
+index
+is
+correct
+"
+)
+;
+is
+(
+data
+.
+entries
+[
+0
+]
+.
+url
+url2
+"
+URL
+of
+first
+history
+entry
+is
+correct
+after
+data
+clearing
+"
+)
+;
+cleanupTabs
+(
 )
 ;
 }
