Bug 1718713 - Creates dummy custom element in new screenshot. r=emalysz
Differential Revision: https://phabricator.services.mozilla.com/D119209

UltraBlame original commit: 57c50b132961212eef7f97e03aa7cfa69350ac43

--- a/browser/base/content/browser.xhtml
+++ b/browser/base/content/browser.xhtml
@@ -1652,6 +1652,30 @@ js
 this
 )
 ;
+Services
+.
+scriptloader
+.
+loadSubScript
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+screenshots
+/
+screenshots
+.
+js
+"
+this
+)
+;
 window
 .
 onload
