Bug 1720574 - Add a way to disable event listeners, r=edgar,Honza
The old test for the service is reused here. Added some basic tests there.

Differential Revision: https://phabricator.services.mozilla.com/D119921

UltraBlame original commit: 3aa84c28a7fd377913a29c5d88cb7606ea83db56

--- a/dom/events/test/test_bug448602.html
+++ b/dom/events/test/test_bug448602.html
@@ -199,6 +199,39 @@ root
 l2
 l3
 ;
+var
+handlerCalled
+=
+false
+;
+var
+capturingListenerCalled
+=
+false
+;
+var
+bubblingListenerCalled
+=
+false
+;
+function
+clearListenerStates
+(
+)
+{
+handlerCalled
+=
+false
+;
+capturingListenerCalled
+=
+false
+;
+bubblingListenerCalled
+=
+false
+;
+}
 function
 runTests
 (
@@ -280,10 +313,9 @@ var
 listenerSource
 =
 '
-alert
-(
-event
-)
+handlerCalled
+=
+true
 ;
 '
 ;
@@ -445,6 +477,385 @@ object
 1
 )
 "
+)
+;
+/
+/
+Test
+disabling
+and
+enabling
+the
+listener
+.
+ok
+(
+!
+handlerCalled
+)
+;
+root
+.
+click
+(
+)
+;
+ok
+(
+handlerCalled
+)
+;
+clearListenerStates
+(
+)
+infos
+[
+0
+]
+.
+enabled
+=
+false
+;
+root
+.
+click
+(
+)
+;
+ok
+(
+!
+handlerCalled
+)
+;
+clearListenerStates
+(
+)
+infos
+[
+0
+]
+.
+enabled
+=
+true
+;
+root
+.
+click
+(
+)
+;
+ok
+(
+handlerCalled
+)
+;
+clearListenerStates
+(
+)
+;
+function
+capturingListener
+(
+)
+{
+capturingListenerCalled
+=
+true
+;
+}
+function
+bubblingListener
+(
+)
+{
+bubblingListenerCalled
+=
+true
+;
+}
+root
+.
+addEventListener
+(
+"
+click
+"
+capturingListener
+true
+)
+;
+root
+.
+addEventListener
+(
+"
+click
+"
+bubblingListener
+)
+;
+root
+.
+addEventListener
+(
+"
+fooevent
+"
+capturingListener
+true
+)
+;
+root
+.
+addEventListener
+(
+"
+fooevent
+"
+bubblingListener
+)
+;
+infos
+=
+els
+.
+getListenerInfoFor
+(
+root
+)
+;
+/
+/
+Use
+a
+child
+node
+to
+dispatch
+events
+so
+that
+both
+capturing
+and
+bubbling
+/
+/
+listeners
+get
+called
+.
+l2
+=
+document
+.
+getElementById
+(
+"
+testlevel2
+"
+)
+;
+l2
+.
+click
+(
+)
+;
+ok
+(
+handlerCalled
+)
+;
+ok
+(
+capturingListenerCalled
+)
+;
+ok
+(
+bubblingListenerCalled
+)
+;
+clearListenerStates
+(
+)
+;
+infos
+[
+0
+]
+.
+enabled
+=
+false
+;
+l2
+.
+click
+(
+)
+;
+ok
+(
+!
+handlerCalled
+)
+;
+ok
+(
+capturingListenerCalled
+)
+;
+ok
+(
+bubblingListenerCalled
+)
+;
+clearListenerStates
+(
+)
+;
+infos
+[
+0
+]
+.
+enabled
+=
+true
+;
+infos
+[
+1
+]
+.
+enabled
+=
+false
+;
+l2
+.
+click
+(
+)
+;
+ok
+(
+handlerCalled
+)
+;
+ok
+(
+!
+capturingListenerCalled
+)
+;
+ok
+(
+bubblingListenerCalled
+)
+;
+clearListenerStates
+(
+)
+;
+infos
+[
+1
+]
+.
+enabled
+=
+true
+;
+infos
+[
+2
+]
+.
+enabled
+=
+false
+;
+l2
+.
+click
+(
+)
+;
+ok
+(
+handlerCalled
+)
+;
+ok
+(
+capturingListenerCalled
+)
+;
+ok
+(
+!
+bubblingListenerCalled
+)
+;
+clearListenerStates
+(
+)
+;
+infos
+[
+2
+]
+.
+enabled
+=
+true
+;
+root
+.
+removeEventListener
+(
+"
+click
+"
+capturingListener
+true
+)
+;
+root
+.
+removeEventListener
+(
+"
+click
+"
+bubblingListener
+)
+;
+root
+.
+removeEventListener
+(
+"
+fooevent
+"
+capturingListener
+true
+)
+;
+root
+.
+removeEventListener
+(
+"
+fooevent
+"
+bubblingListener
 )
 ;
 root
@@ -1065,17 +1476,6 @@ Event
 target
 chain
 tests
-l2
-=
-document
-.
-getElementById
-(
-"
-testlevel2
-"
-)
-;
 l3
 =
 document
