Bug 1720229 - Wait for about:blank load in iframe-inheritance-about-blank.html. r=smaug
This is basically bug 543435, where the initial about:blank load is
async in Gecko but not in other browsers.

Differential Revision: https://phabricator.services.mozilla.com/D120059

UltraBlame original commit: f7d41f76398fd50d09ca70878653ca06c49df6e5

--- a/testing/web-platform/tests/referrer-policy/generic/inheritance/iframe-inheritance-about-blank.html
+++ b/testing/web-platform/tests/referrer-policy/generic/inheritance/iframe-inheritance-about-blank.html
@@ -760,15 +760,17 @@ iframe
 "
 )
 ;
-document
-.
-body
-.
-appendChild
-(
 iframe
+.
+addEventListener
+(
+"
+load
+"
+function
+(
 )
-;
+{
 const
 iframe_script
 =
@@ -1182,6 +1184,18 @@ body
 appendChild
 (
 iframe_script
+)
+;
+}
+)
+;
+document
+.
+body
+.
+appendChild
+(
+iframe
 )
 ;
 <
