Bug 1719874 - Wait for iframe to load before adding scripts to it in test r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D120072

UltraBlame original commit: 62c24e103f5e90698a9d7a1cd6e9038fd26fec86

--- a/testing/web-platform/tests/html/browsers/origin/origin-keyed-agent-clusters/about-blank.https.sub.html
+++ b/testing/web-platform/tests/html/browsers/origin/origin-keyed-agent-clusters/about-blank.https.sub.html
@@ -249,22 +249,9 @@ insertAboutBlankIframe
 const
 iframe
 =
-document
-.
-createElement
+await
+createBlankIframe
 (
-"
-iframe
-"
-)
-;
-document
-.
-body
-.
-append
-(
-iframe
 )
 ;
 /
@@ -447,6 +434,59 @@ iframe
 .
 contentWindow
 )
+;
+}
+function
+createBlankIframe
+(
+)
+{
+const
+iframe
+=
+document
+.
+createElement
+(
+"
+iframe
+"
+)
+;
+const
+promise
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+iframe
+.
+addEventListener
+(
+"
+load
+"
+resolve
+)
+;
+}
+)
+;
+document
+.
+body
+.
+append
+(
+iframe
+)
+;
+return
+promise
 ;
 }
 <
